<resources>
    <string name="app_name">Ma réu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrow_back_contentdescription">arrow back</string>
    <string name="write_participant_mail">Write participant mail...</string>
    <string name="create_meeting">Create meeting</string>
    <string name="dialog_resume">Resume</string>
    <string name="dialog_resume_add_meeting">Add meeting</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="filter_location">Filter: Location</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="filter_date">Filter: Date</string>
    <string name="with_range">With range</string>
    <string name="without_range">Without range</string>
    <string name="only_this_day">Only this day</string>
    <string name="before_this_day">Before this day</string>
    <string name="after_this_day">After this day</string>
    <string name="room">Room</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="meeting_s_description">Meeting\'s description</string>
    <string name="what_will_be_the_main_topic">What will be the main topic...</string>
    <string name="admin_s_details">Admin\'s details</string>
    <string name="type_your_username">Type your userName</string>
    <string name="type_your_mail_address">Type your mail address</string>
    <string name="choose_a_meeting_color">Choose a meeting color</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="orange">Orange</string>
    <string name="add_participant">Add participant</string>
    <string name="nothing_chosen_dialog_filter_room">Nothing was chosen</string>
    <string name="meeting_deleted_toast">Meeting is deleted</string>
    <string name="error_range_date">Please choose a second date bigger than the first date</string>
    <string name="error_radiobutton_date">You have to choose at least on radio button</string>
    <string name="error_method_date_dialog">You can choose only one filter method, please expend only the spinner or the radio button</string>
    <string name="add_a_meeting_floating_button">add a meeting floating button</string>
    <string name="circleview_user_chose_color_meeting">circleView user chose color meeting</string>
    <string name="close_dialog">close dialog</string>
    <string name="show_checkboxes">show checkboxes</string>
    <string name="delelt_meeting_item">delelt meeting item</string>
    <string name="admin_field_dialog_resum">Admin: </string>
    <string name="room_field_dialog_resum">Room: </string>
    <string name="date_field_dialog_resum">Date: </string>
    <string name="hour_field_dialog_resum">Hour: </string>
    <string name="topic_field_dialog_resum">Topic: </string>
    <string name="made_the_field_dialog_resum">Made the: </string>
    <string name="duration_add_meeting">Duration: </string>
    <string name="minute">minute</string>
    <string name="pattern_date">dd.MM.yyyy</string>
    <string name="error">Oups something went wrong</string>
</resources>